--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,21 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ site.title }}</title>
   <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/solo.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/site.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
   {% if site.font-awesome-include %}<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">{% endif %}
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/rrssb.css">
-
-  <script src="{{ site.baseurl }}/scripts/jquery.js"></script>
+  {% if site.social-sharing-include %}<link rel="stylesheet" href="{{ site.baseurl }}/css/rrssb.css">{% endif %}
   <link rel="canonical" href="{{ site.url }}" />
 </head>
 <body>
-  <article>
-   <div class="container">
-    <h1><a href="./">{{ site.tag_text }}</a></h1>
-    {{ content }}
-    </div>
-  </article>
-<script src="{{ site.baseurl }}/scripts/rrssb.min.js"></script>
+  <div class="container">
+    <article>
+      <h1><a href="./">{{ site.tag_text }}</a></h1>
+      {{ content }}
+    </article>
+    <script src="{{ site.baseurl }}/scripts/jquery.min.js"></script>
+    {% if site.social-sharing-include %}<script src="{{ site.baseurl }}/scripts/rrssb.min.js"></script>{% endif %}
+  </div>
 </body>
 </html>
