--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,25 +6,25 @@
   <meta name="description" content="{{ site.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ site.title }}</title>
-  <link rel="stylesheet" href="{{ site.url }}/css/normalize.css">
-  <link rel="stylesheet" href="{{ site.url }}/css/site.css">
-  <link rel="stylesheet" href="{{ site.url }}/css/syntax.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/site.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
   {% if site.font-awesome %}<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">{% endif %}
-  {% if site.social-sharing %}<link rel="stylesheet" href="{{ site.url }}/css/rrssb.css">{% endif %}
-  <link rel="canonical" href="{{ site.url }}" />
+  {% if site.social-sharing %}<link rel="stylesheet" href="{{ site.baseurl }}/css/rrssb.css">{% endif %}
+  <link rel="canonical" href="{{ site.baseurl }}" />
 </head>
 <body>
   <div class="container">
     <article>
       <header>
-        <h1><a href="{{ site.url }}">{{ site.header }}</a></h1>
+        <h1><a href="{{ site.baseurl }}">{{ site.header }}</a></h1>
       </header>
       {{ content }}
     </article>
     {% if site.social-sharing %}{% include sharing.html %}{% endif %}
     {% include footer.html %}
-    <script src="{{ site.url }}/scripts/jquery.min.js"></script>
-    {% if site.social-sharing %}<script src="{{ site.url }}/scripts/rrssb.min.js"></script>{% endif %}
+    <script src="{{ site.baseurl }}/scripts/jquery.min.js"></script>
+    {% if site.social-sharing %}<script src="{{ site.baseurl }}/scripts/rrssb.min.js"></script>{% endif %}
   </div>
 </body>
 </html>
