--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,11 +6,18 @@
   <meta name="description" content="{{ site.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ site.title }}</title>
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/site.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/site.css">
+  <link rel="stylesheet" href="/css/syntax.css">
   {% if site.font-awesome %}<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">{% endif %}
   <link rel="canonical" href="{{ site.baseurl }}" />
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="favicon-114x114.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="favicon-114x114.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="favicon-144x144.png">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="favicon-144x144.png">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
+  <link rel="icon" type="image/vnd.microsoft.icon" sizes="32x32 48x48" href="favicon.ico">
+  <link rel="icon" sizes="128x128" href="favicon.icns">
 </head>
 <body>
   <div class="container">
@@ -21,7 +28,7 @@
       {{ content }}
     </article>
     {% include footer.html %}
-    <script src="{{ site.baseurl }}/scripts/jquery.min.js"></script>
+    <script src="/scripts/jquery.min.js"></script>
  </div>
 </body>
 </html>
