--- a/css/site.css
+++ b/css/site.css
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 2.5rem;
-  margin-bottom: 7rem;
+  /*margin-bottom: 2.5rem;*/
   font-weight: 700;
   margin-left: -2rem;
   margin-right: -2rem;
@@ -137,7 +137,7 @@ blockquote p:last-child {
 
 hr {
   border: none;
-  margin: 1.5rem 0;
+  /*margin: 1.5rem 0;*/
   border-bottom: 1px solid #ccc;
   position: relative;
   top: -1px;
@@ -190,6 +190,55 @@ code {
 
 pre > code {
   padding: 0;
+}
+
+#profile {
+  display: table;
+}
+
+.profile-row {
+  display: table-row;
+}
+
+#profile-img {
+  min-width: 25px;
+  min-height: 25px;
+  -webkit-filter: grayscale(100%);
+  border-radius: 50%;
+  -webkit-transform: rotate(-10deg);
+     -moz-transform: rotate(-10deg);
+       -o-transform: rotate(-10deg);
+      -ms-transform: rotate(-10deg);
+          transform: rotate(-10deg);
+
+  padding: 4px;
+  line-height: 1.5;
+  background-color: #ffffff;
+  border: 1px solid #dddddd;
+  transition: all 0.2s ease-in-out;
+  display: table-cell;
+  max-width: 100%;
+  height: auto;
+}
+
+#profile-img:hover {
+  -webkit-filter: grayscale(0%);
+  border-radius: 0%;
+  -webkit-transform: rotate(0deg);
+   -moz-transform: rotate(0deg);
+     -o-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+      transform: rotate(0deg);
+}
+
+.profile-text {
+  display: table-cell; 
+  vertical-align: middle; 
+  padding-left: 60px;
+}
+
+.shadow {
+  box-shadow: 10px 10px 5px #888;
 }
 
 .container {
