--- a/css/site.css
+++ b/css/site.css
@@ -62,39 +62,20 @@ h1 a {
 }
 
 h2 {
-  margin-top: 2rem;
-  font-size: 1.75rem;
-  font-weight: 500;
-  margin-bottom: 5rem;
-  color: #555;
-  text-align: right;
-  margin-right: -4rem;
-}
-
-@media (min-width: 30rem) {
-  h2 {
-    margin-top: 2.5rem;
-    font-size: 1.75rem;
-    margin-bottom: 8rem;
-    margin-right: -4rem;
-  }
-}
-
-h3 {
   margin: 2rem -2rem 1.75rem -2rem;
   margin-top: 2rem;
   font-size: 1.75rem;
 }
 
 @media (min-width: 30rem) {
-  h3 {
+  h2 {
     margin-top: 2.5rem;
     font-size: 2rem;
     margin-bottom: 1.5rem;
   }
 }
 
-h4, h5, h6 {
+h3, h4, h5, h6 {
   margin: 1.5rem -1rem 1.5rem -1rem;
   font-size: 1.5rem;
 }
