--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,7 @@
   <div class="container">
     <article>
       {% include header.html %}
+      <p><a href="{{ site.baseurl }}/">Back to the blog</a></p>
       {{ content }}
     </article>
     {% if site.social-sharing %}{% include sharing.html %}{% endif %}
