Fix for profile image alignment in firefox

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
 	<hr>
-	<p>
+	<p id="profile-img-holder">
 		<img alt="Niklas Lindblad" src="/images/niklas.jpg" id="profile-img" class="shadow" /> 
 	</p>
 	<p id="profile-links">
