--- a/css/site.scss
+++ b/css/site.scss
@@ -1,3 +1,6 @@
+---
+---
+
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,300italc,400,400italic,500,700);
 
 html {
@@ -290,5 +293,4 @@ pre > code {
 
 .sharing-buttons {
 	width: 100%;
-}
 }
