--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,133 +12,8 @@
 /*! loadCSS rel=preload polyfill. [c]2017 Filament Group, Inc. MIT License */
 !function(a){if(a.loadCSS){var b=loadCSS.relpreload={};if(b.support=function(){try{return a.document.createElement("link").relList.supports("preload")}catch(b){return!1}},b.poly=function(){for(var b=a.document.getElementsByTagName("link"),c=0;c<b.length;c++){var d=b[c];"preload"===d.rel&&"style"===d.getAttribute("as")&&(a.loadCSS(d.href,d,d.getAttribute("media")),d.rel=null)}},!b.support()){b.poly();var c=a.setInterval(b.poly,300);a.addEventListener&&a.addEventListener("load",function(){b.poly(),a.clearInterval(c)}),a.attachEvent&&a.attachEvent("onload",function(){a.clearInterval(c)})}}}(this);
   </script>
-  <style type="text/css">
-    @media (max-width: 325px) {
-      html {
-        font: 17px/1.6 'Open Sans', sans-serif;
-      }
-    }
-
-    body {
-      margin: 2rem 0 5rem;
-      color: #222;
-    }
-
-    @media (min-width: 30rem) {
-      body {
-        margin-top: 5rem;
-      }
-    }
-
-    a {
-      color: #0074d9;
-      /* From http://clrs.cc */
-      text-decoration: none;
-    }
-
-    h1,
-    h3 {
-      margin: 0 0 0.5rem -0.1rem;
-      color: #111;
-      text-rendering: optimizeLegibility;
-      font-family: 'Open Sans', serif;
-      line-height: 1.2;
-    }
-
-    @media (max-width: 750px) {
-      h1,
-      h3 {
-        margin-left: 0 !important;
-        margin-right: 0 !important;
-      }
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      font-weight: 700;
-      margin-left: -2rem;
-      margin-right: -2rem;
-      margin-bottom: 1rem;
-    }
-
-    @media (min-width: 30rem) {
-      h1 {
-        font-size: 4rem;
-      }
-    }
-
-    h3 {
-      margin: 1.5rem -1rem 1.5rem -1rem;
-      font-size: 1.5rem;
-    }
-
-    p {
-      margin-top: 0;
-      margin-bottom: 1.5rem;
-    }
-
-    hr {
-      border: none;
-      margin: 2.5rem 0;
-      border-bottom: 1px solid #ccc;
-      position: relative;
-      top: -1px;
-    }
-
-    a {
-      word-wrap: break-word;
-    }
-
-    .container img {
-      margin: 2em auto 2em auto;
-      display: block;
-      max-width: 75%;
-    }
-
-    @media (max-width: 635px) {
-      .container img {
-        max-width: 100%;
-      }
-    }
-
-    #profile-img-holder {
-      text-align: center;
-    }
-
-    #profile-img {
-      min-width: 25px;
-      min-height: 25px;
-      max-width: 150px;
-      max-height: 150px;
-      -webkit-filter: grayscale(100%);
-      border-radius: 50%;
-      -webkit-transform: rotate(-10deg);
-      -moz-transform: rotate(-10deg);
-      -o-transform: rotate(-10deg);
-      -ms-transform: rotate(-10deg);
-      transform: rotate(-10deg);
-      padding: 4px;
-      line-height: 1.5;
-      background-color: #ffffff;
-      border: 1px solid #dddddd;
-      display: table-cell;
-      max-width: 100%;
-      height: auto;
-    }
-
-    #profile-links {
-      text-align: center;
-    }
-
-    .shadow {
-      box-shadow: 10px 10px 5px #888;
-    }
-
-    .container {
-      max-width: 625px;
-      margin: 0 auto;
-      padding: 0 0.75rem;
-    }
+    <style type="text/css">
+    @import "https://fonts.googleapis.com/css?family=Open+Sans:300,300italc,400,400italic,500,700";html{font:18px/1.6 'Open Sans',sans-serif}@media (max-width: 325px){html{font:17px/1.6 'Open Sans',sans-serif}}body{margin:2rem 0 5rem;color:#222}@media (min-width: 30rem){body{margin-top:5rem}}a{color:#0074d9;text-decoration:none}h1,h3{margin:0 0 .5rem -.1rem;color:#111;text-rendering:optimizeLegibility;font-family:'Open Sans',serif;line-height:1.2}@media (max-width: 750px){h1,h3{margin-left:0!important;margin-right:0!important}}h1{font-size:2.5rem;font-weight:700;margin-left:-2rem;margin-right:-2rem;margin-bottom:1rem}@media (min-width: 30rem){h1{font-size:4rem}}h3{margin:1.5rem -1rem;font-size:1.5rem}p{margin-top:0;margin-bottom:1.5rem}hr{border:none;margin:2.5rem 0;border-bottom:1px solid #ccc;position:relative;top:-1px}a{word-wrap:break-word}.container img{margin:2em auto;display:block;max-width:75%}@media (max-width: 635px){.container img{max-width:100%}}#profile-img-holder{text-align:center}#profile-img{min-width:25px;min-height:25px;max-width:150px;max-height:150px;-webkit-filter:grayscale(100%);border-radius:50%;-webkit-transform:rotate(-10deg);-moz-transform:rotate(-10deg);-o-transform:rotate(-10deg);-ms-transform:rotate(-10deg);transform:rotate(-10deg);padding:4px;line-height:1.5;background-color:#fff;border:1px solid #ddd;display:table-cell;max-width:100%;height:auto}#profile-links{text-align:center}.shadow{box-shadow:10px 10px 5px #888}.container{max-width:625px;margin:0 auto;padding:0 .75rem}
   </style>
   <link rel="preload" href="{{ site.baseurl }}/css/normalize.css" as="style" onload="this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="{ site.baseurl }}/css/normalize.css"></noscript>
@@ -166,8 +41,8 @@
     </article>
     {% if site.social-sharing %}{% include sharing.html %}{% endif %}
     {% include footer.html %}
-    <script src="{{ site.baseurl }}/scripts/jquery.min.js"></script>
-    {% if site.social-sharing %}<script src="{{ site.baseurl }}/scripts/rrssb.min.js"></script>{% endif %}
+    {% if site.social-sharing %}<script src="{{ site.baseurl }}/scripts/jquery.min.js"></script>{% endif %}
+    {% if site.jquery %}<script src="{{ site.baseurl }}/scripts/rrssb.min.js"></script>{% endif %}
   </div>
 </body>
 </html>
