--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,36 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="{{ site.description }}">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ site.title }} | {{ page.title }}</title>
-  <script type="text/javascript">
-    /*! loadCSS. [c]2017 Filament Group, Inc. MIT License */
-!function(a){"use strict";var b=function(b,c,d){function e(a){return h.body?a():void setTimeout(function(){e(a)})}function f(){i.addEventListener&&i.removeEventListener("load",f),i.media=d||"all"}var g,h=a.document,i=h.createElement("link");if(c)g=c;else{var j=(h.body||h.getElementsByTagName("head")[0]).childNodes;g=j[j.length-1]}var k=h.styleSheets;i.rel="stylesheet",i.href=b,i.media="only x",e(function(){g.parentNode.insertBefore(i,c?g:g.nextSibling)});var l=function(a){for(var b=i.href,c=k.length;c--;)if(k[c].href===b)return a();setTimeout(function(){l(a)})};return i.addEventListener&&i.addEventListener("load",f),i.onloadcssdefined=l,l(f),i};"undefined"!=typeof exports?exports.loadCSS=b:a.loadCSS=b}("undefined"!=typeof global?global:this);
-/*! loadCSS rel=preload polyfill. [c]2017 Filament Group, Inc. MIT License */
-!function(a){if(a.loadCSS){var b=loadCSS.relpreload={};if(b.support=function(){try{return a.document.createElement("link").relList.supports("preload")}catch(b){return!1}},b.poly=function(){for(var b=a.document.getElementsByTagName("link"),c=0;c<b.length;c++){var d=b[c];"preload"===d.rel&&"style"===d.getAttribute("as")&&(a.loadCSS(d.href,d,d.getAttribute("media")),d.rel=null)}},!b.support()){b.poly();var c=a.setInterval(b.poly,300);a.addEventListener&&a.addEventListener("load",function(){b.poly(),a.clearInterval(c)}),a.attachEvent&&a.attachEvent("onload",function(){a.clearInterval(c)})}}}(this);
-  </script>
-    <style type="text/css">
-    @import "https://fonts.googleapis.com/css?family=Open+Sans:300,300italc,400,400italic,500,700";html{font:18px/1.6 'Open Sans',sans-serif}@media (max-width: 325px){html{font:17px/1.6 'Open Sans',sans-serif}}body{margin:2rem 0 5rem;color:#222}@media (min-width: 30rem){body{margin-top:5rem}}a{color:#0074d9;text-decoration:none}h1,h3{margin:0 0 .5rem -.1rem;color:#111;text-rendering:optimizeLegibility;font-family:'Open Sans',serif;line-height:1.2}@media (max-width: 750px){h1,h3{margin-left:0!important;margin-right:0!important}}h1{font-size:2.5rem;font-weight:700;margin-left:-2rem;margin-right:-2rem;margin-bottom:1rem}@media (min-width: 30rem){h1{font-size:4rem}}h3{margin:1.5rem -1rem;font-size:1.5rem}p{margin-top:0;margin-bottom:1.5rem}hr{border:none;margin:2.5rem 0;border-bottom:1px solid #ccc;position:relative;top:-1px}a{word-wrap:break-word}.container img{margin:2em auto;display:block;max-width:75%}@media (max-width: 635px){.container img{max-width:100%}}#profile-img-holder{text-align:center}#profile-img{min-width:25px;min-height:25px;max-width:150px;max-height:150px;-webkit-filter:grayscale(100%);border-radius:50%;-webkit-transform:rotate(-10deg);-moz-transform:rotate(-10deg);-o-transform:rotate(-10deg);-ms-transform:rotate(-10deg);transform:rotate(-10deg);padding:4px;line-height:1.5;background-color:#fff;border:1px solid #ddd;display:table-cell;max-width:100%;height:auto}#profile-links{text-align:center}.shadow{box-shadow:10px 10px 5px #888}.container{max-width:625px;margin:0 auto;padding:0 .75rem}
-  </style>
-  <link rel="preload" href="{{ site.baseurl }}/css/normalize.css" as="style" onload="this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="{ site.baseurl }}/css/normalize.css"></noscript>
-  <link rel="preload" href="{{ site.baseurl }}/css/site.css" as="style" onload="this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="{{ site.baseurl }}/css/site.css"></noscript>
-  <link rel="preload" href="{{ site.baseurl }}/css/syntax.css" as="style" onload="this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css"></noscript>
-  {% if site.font-awesome %}<link rel="preload" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" as="style" onload="this.rel='stylesheet'"><noscript><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"></noscript>{% endif %}
-  {% if site.social-sharing %}<link rel="stylesheet" href="{{ site.baseurl }}/css/rrssb.css"><noscript><link rel="stylesheet" href="{{ site.baseurl }}/css/rrssb.css">{% endif %}
-  <link rel="canonical" href="{{ site.baseurl }}" />
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ site.baseurl }}/favicon-114x114.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.baseurl }}/favicon-114x114.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.baseurl }}/favicon-144x144.png">
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/favicon-144x144.png">
-  <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.png">
-  <link rel="icon" type="image/vnd.microsoft.icon" sizes="32x32 48x48" href="{{ site.baseurl }}/favicon.ico">
-  <link rel="icon" sizes="128x128" href="{{ site.baseurl }}/favicon.icns">
+{% include head.html %}
+{% if site.social-sharing %}<link rel="stylesheet" href="{{ site.baseurl }}/css/rrssb.css"><noscript><link rel="stylesheet" href="{{ site.baseurl }}/css/rrssb.css">{% endif %}
 </head>
 <body>
   <div class="container">
