Fixed some validation issues

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@
   <div class="container">
     <article>
       {% include header.html %}
-      <p><a href="{{ site.baseurl }}/"><i class="fa fa-angle-double-left"></i>&nbsp;&nbsp;Back to the blog</a></p>
+      <p><a href="{{ site.baseurl }}/">Back to the blog</a></p>
       {{ content }}
     </article>
     {% if site.social-sharing %}{% include sharing.html %}{% endif %}
