Fixed some more validation errors

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,11 +19,10 @@ html{font:18px/1.6 'Open Sans',sans-serif}@media (max-width: 325px){html{font:17
 <link rel="preload" href="{{ site.baseurl }}/css/syntax.css" as="style" onload="this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css"></noscript>
 {% if site.font-awesome %}<link rel="preload" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" as="style" onload="this.rel='stylesheet'"><noscript><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"></noscript>{% endif %}
-<link rel="canonical" href="{{ site.baseurl }}" />
-<link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ site.baseurl }}/favicon-114x114.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.baseurl }}/favicon-114x114.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.baseurl }}/favicon-144x144.png">
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/favicon-144x144.png">
+<link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/favicon-114x114.png">
+<link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}/favicon-114x114.png">
+<link rel="apple-touch-icon" sizes="72x72" href="{{ site.baseurl }}/favicon-144x144.png">
+<link rel="apple-touch-icon´" sizes="144x144" href="{{ site.baseurl }}/favicon-144x144.png">
 <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.png">
 <link rel="icon" type="image/vnd.microsoft.icon" sizes="32x32 48x48" href="{{ site.baseurl }}/favicon.ico">
 <link rel="icon" sizes="128x128" href="{{ site.baseurl }}/favicon.icns">
