another small error fix

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,7 @@ html{font:18px/1.6 'Open Sans',sans-serif}@media (max-width: 325px){html{font:17
 <link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/favicon-114x114.png">
 <link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}/favicon-114x114.png">
 <link rel="apple-touch-icon" sizes="72x72" href="{{ site.baseurl }}/favicon-144x144.png">
-<link rel="apple-touch-icon´" sizes="144x144" href="{{ site.baseurl }}/favicon-144x144.png">
+<link rel="apple-touch-icon" sizes="144x144" href="{{ site.baseurl }}/favicon-144x144.png">
 <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.png">
 <link rel="icon" type="image/vnd.microsoft.icon" sizes="32x32 48x48" href="{{ site.baseurl }}/favicon.ico">
 <link rel="icon" sizes="128x128" href="{{ site.baseurl }}/favicon.icns">
