Updated link to original theme

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,6 @@
 		I'll be posting content related to software engineering, tools and agile practices, so stay tuned!
 	</p>
 	<hr>
-	<p>This site is based on <a href="https://adueck.github.io/good-clean-read">Good Clean Read</a>, by <a href="https://github.com/adueck">Adam Dueck</a></p>
+	<p>This site is based on <a href="https://github.com/adueck/good-clean-read">Good Clean Read</a>, by <a href="https://github.com/adueck">Adam Dueck</a></p>
 	<p>Last updated {{ site.time | date_to_string }}</p>
 </footer>
