--- a/css/site.scss
+++ b/css/site.scss
@@ -1,14 +1,14 @@
 ---
 ---
 
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,300italc,400,400italic,500,700);
-
 html {
   font: 18px/1.6 'Open Sans', sans-serif;
 }
 
 @media (max-width: 325px) {
-  html { font: 17px/1.6 'Open Sans', sans-serif; }
+  html {
+  font: 17px/1.6 'Open Sans', sans-serif; 
+  }
 }
 
 body {
