--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,9 @@
     {% include footer.html %}
     {% if site.social-sharing %}<script src="{{ site.baseurl }}/scripts/jquery.min.js"></script>{% endif %}
     {% if site.jquery %}<script src="{{ site.baseurl }}/scripts/rrssb.min.js"></script>{% endif %}
+    <script>
+    !function(e,t,a,n,c,o,s){e.GoogleAnalyticsObject=c,e[c]=e[c]||function(){(e[c].q=e[c].q||[]).push(arguments)},e[c].l=1*new Date,o=t.createElement(a),s=t.getElementsByTagName(a)[0],o.async=1,o.src="https://www.google-analytics.com/analytics.js",s.parentNode.insertBefore(o,s)}(window,document,"script",0,"ga"),ga("create","UA-104892141-1","auto"),ga("send","pageview");
+    </script>
   </div>
 </body>
 </html>
