--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,3 +29,4 @@ html{font:18px/1.6 'Open Sans',sans-serif}@media (max-width: 325px){html{font:17
 <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.png">
 <link rel="icon" type="image/vnd.microsoft.icon" sizes="32x32 48x48" href="{{ site.baseurl }}/favicon.ico">
 <link rel="icon" sizes="128x128" href="{{ site.baseurl }}/favicon.icns">
+{% seo %}
