Added new drafts, updated js and fixed typo in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,12 +9,12 @@
 	    {% endfor %}
     </p>
 	<p>
-		Hi! Nice to see you found my blog. I'm Niklas, a sofware developer working at <a href="http://www.squeed.com/">Squeed</a>.
+		Hi! Nice to see you found my blog. I'm Niklas, a software developer working at <a href="http://www.squeed.com/">Squeed</a>.
 	</p>
 	<p>
 		I'll be posting content related to software engineering, tools and agile practices, so stay tuned!
 	</p>
 	<hr>
-	<p>This site is based on <a href="https://github.com/adueck/good-clean-read">Good Clean Read</a>, by <a href="https://github.com/adueck">Adam Dueck</a></p>
+	<p>This sites theme is based on <a href="https://github.com/adueck/good-clean-read">Good Clean Read</a></p>
 	<p>Last updated {{ site.time | date_to_string }}</p>
 </footer>
