New drafts, some dependency changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
 	    {% endfor %}
     </p>
 	<p>
-		Hi! Nice to see you found my blog. I'm Niklas, a software developer working at <a href="http://www.squeed.com/">Squeed</a>.
+		Hi! Nice to see you found my blog. I'm Niklas, a software developer working at <a href="https://www.squeed.com/">Squeed</a>.
 	</p>
 	<p>
 		I'll be posting content related to software engineering, tools and agile practices, so stay tuned!
